--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -31,6 +31,9 @@
   "itemgroup.tutorialmod.pink_garnet_items": "Pink Garnet Items",
   "itemgroup.tutorialmod.pink_garnet_blocks": "Pink Garnet Blocks",
 
+  "block.tutorialmod.pink_garnet_lamp": "Pink Garnet Lamp",
+
+
   "tooltip.tutorialmod.magic_block.tooltip": "This block is very, very §9MAGICAL§r",
 
   "tooltip.tutorialmod.chisel.shift_down": "This item chisels blocks into Bricks!",
