--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -23,6 +23,8 @@
 
   "item.tutorialmod.kaupen_bow": "Kaupen Bow",
 
+  "item.tutorialmod.bar_brawl_music_disc": "Bar Brawl Music Disc",
+  "item.tutorialmod.bar_brawl_music_disc.desc": "Bryan Tech - Bar Brawl (CC0)",
 
 
   "block.tutorialmod.pink_garnet_block": "Block of Pink Garnet",
