--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -27,6 +27,7 @@
   "item.tutorialmod.bar_brawl_music_disc.desc": "Bryan Tech - Bar Brawl (CC0)",
 
   "item.tutorialmod.cauliflower_seeds": "Cauliflower Seeds",
+  "item.tutorialmod.honey_berries": "Honey Berries",
 
 
   "item.minecraft.potion.effect.slimey_potion": "Slimey Potion",
@@ -59,6 +60,7 @@
   "block.tutorialmod.pink_garnet_lamp": "Pink Garnet Lamp",
 
   "block.tutorialmod.cauliflower_crop": "Cauliflower Crop",
+  "block.tutorialmod.honey_berry_bush": "Honey Berry Bush",
 
 
   "effect.tutorialmod.slimey": "Slimey",
